--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,6 @@
 *.app
 
 # directories and useless files
-/td0/CMakeFiles/*
-/td0/*.txt
-/td0/cmake_install.cmake
+/*/CMakeFiles/*
+/*/*.txt
+/*/cmake_install.cmake
